fix: clean up button spacing and improve CSS styles for load more button and content layout

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -37,6 +38,9 @@ a {
   position: relative;
   overflow: hidden;
 }
+.jumboContainer img {
+  max-width: 100%;
+}
 
 .currSeries {
   color: white;
@@ -58,33 +62,40 @@ a {
 .content {
   background-color: #1c1c1c;
   min-height: 15vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 0 10rem;
+  position: relative;
 }
-
+.loadMore {
+  background-color: #0282f9;
+  border: 2px solid #0282f9;
+  padding: 5px 5rem;
+  color: white;
+  font-weight: 700;
+  font-size: large;
+  position: absolute;
+  right: 54rem;
+  bottom: -12rem;
+}
 /* #region ROWS & CARDS */
 .row {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  gap: 1rem;
+  padding: 3rem 1rem;
 }
 .col {
-  padding: 3rem;
+  width: calc((100% - (5 * 1rem)) / 6);
+  padding: 0 3rem;
 }
 .card {
+  padding: 1rem;
   color: white;
   display: flex;
-  align-content: center;
   justify-content: center;
   flex-direction: column;
 }
 .cardHead {
-  width: 15rem;
-  height: 15rem;
-  overflow: hidden;
+  min-width: 10rem;
+  height: 10rem;
 }
 .cardHead img {
   min-width: 100%;
@@ -94,12 +105,12 @@ a {
   display: block;
 }
 .cardBody {
-  max-width: 12rem;
+  max-width: 10rem;
 }
 .cardBody h4 {
-  padding: 1rem 0;
+  word-break: normal;
+  overflow-wrap: break-word;
 }
-
 /* #endregion ROWS & CARDS */
 
 .visualLinks {
